<resources>
    <string name="app_name">Diary</string>
    <string name="name_1">Diary</string>
    <string name="name_menu1">Fast Diary</string>
    <string name="name_menu0">home</string>
    <string name="name_menu2">Settings</string>
    <string name="name_menu3">Message</string>
    <string name="name_2">Notes</string>
    <string name="name_3">In the development</string>
    <string name="poleDate">enter the date</string>
    <string name="poleTime">enter the time</string>
    <string name="poleColor">choose a color</string>
    <string name="dateDiary">Date</string>
    <string name="timeDiary">Time</string>
    <string name="colorDiary">Color</string>

    <string name="January"> January</string>
    <string name="February"> February</string>
    <string name="March"> March</string>
    <string name="April"> April</string>
    <string name="May"> May</string>
    <string name="June"> June</string>
    <string name="July"> July</string>
    <string name="August"> August</string>
    <string name="September"> September</string>
    <string name="October"> October</string>
    <string name="November"> November</string>
    <string name="December"> December</string>
    <string name="noni">There are no records</string>

    <string name="feeling">How are you feeling?</string>

    <string name="item0">Normal</string>
    <string name="item1">Bright</string>
    <string name="item2">Calm</string>
    <string name="item3">Wicked</string>
    <string name="item4">Scared</string>
    <string name="item5">Gentle</string>
    <string name="item6">Enthusiastic</string>
    <string name="item7">Happy</string>
    <string name="item8">Sincere</string>
    <string name="item9">Confident</string>
    <string name="item10">Anxious</string>
    <string name="item11">Indifferent</string>

    <string name="error01">Fill in the fields!</string>

    <string name="home">Home</string>

    <string name="low">low</string>
    <string name="medium">medium</string>
    <string name="high">high</string>

    <string name="settings">Settings</string>
    <string name="themes">Choosing themes</string>
    <string name="text">Text</string>
    <string name="applications">Applications</string>

    <string name="themes_1">Choose an application theme</string>
    <string name="text_1">Choose the text size</string>
    <string name="text_2">Change the text color</string>
    <string name="text_3">Change the header color</string>
    <string name="text_4">Change Date color</string>

    <string name="applications_1">Color of buttons, menu</string>
    <string name="applications_2">Background color</string>
    <string name="applications_3">Color of notes</string>

    <string name="settingSize_1">Text Settings</string>
    <string name="settingSize_2">8 August</string>
    <string name="settingSize_3">Movie</string>
    <string name="settingSize_4">9:23</string>
    <string name="settingSize_5">Text size</string>
    <string name="settingSize_6">even less</string>
    <string name="settingSize_7">little</string>
    <string name="settingSize_8">standard</string>
    <string name="settingSize_9">big</string>
    <string name="settingSize_10">even more</string>

    <string name="settingColor_1">Text color</string>
    <string name="settingColor_2">Color palette</string>

    <string name="FastТote">Fast note</string>


    <string name="delete">Are you sure you want to delete the record</string>
    <string name="deleteCancellation">cancel</string>
    <string name="deleteYes">delete</string>


    <string name="send">send</string>
    <string name="messageTitle">Message title</string>
    <string name="textMessages">Text messages</string>
    <string name="YourEmailAddress">Your email address</string>

    <string name="Title">Title</string>
    <string name="Text">Text</string>
    <string name="Mail">Mail</string>

    <string name="other">other</string>
    <string name="Diskription">Description</string>


    <string name="infoProtect">When changing more detailed settings, the background priority goes to decreases!</string>
    <string name="infoProtect1">Standard font size is recommended</string>
    <string name="infoProtect2">Leave a review about the app to make it even better!</string>

    <string name="vipStatus_1">VIP status</string>
    <string name="vipStatus_2">The VIP status includes</string>
    <string name="vipStatus_3">Ability to take quick notes</string>
    <string name="vipStatus_4">Many unique and diverse themes</string>
    <string name="vipStatus_5">Changing the design of the application according to your taste</string>
    <string name="vipStatus_6">Future update related to the app</string>
    <string name="vipStatus_7">buy</string>
    <string name="vipStatus_8">cancel</string>
    <string name="vipStatus_9">To open the desired function, you need to buy VIP status.</string>


    <string name="vipERRORE">Temporarily not working</string>

</resources>