<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/funGlav"
    tools:context="Mypersonaldiary.example.myapplication.Message">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/menuTop_0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/byrgerMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#00403D3D"
                app:srcCompat="@drawable/ic_baseline_keyboard_backspace_24" />

            <TextView
                android:id="@+id/TitleMassege"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/name_menu3"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableRow"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/infoProtectBg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/settingcolorItem">

                    <TextView
                        android:id="@+id/infoProtect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/infoProtect2"
                        android:textSize="16sp"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="9dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/messageTitle"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/TitleMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/message"
                        android:ems="10"
                        android:hint="@string/Title"
                        android:inputType="text"
                        android:paddingLeft="8dp"
                        android:paddingTop="8dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="8dp"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:padding="5dp"
                        android:text="@string/textMessages"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/TextMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="350dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/message"
                        android:ems="10"
                        android:fadeScrollbars="false"
                        android:gravity="top"
                        android:hint="@string/Text"
                        android:inputType="textMultiLine"
                        android:paddingLeft="8dp"
                        android:paddingTop="8dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="8dp"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/YourEmailAddress"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/mailMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/message"
                        android:ems="10"
                        android:hint="@string/Mail"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="8dp"
                        android:paddingTop="8dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="8dp"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="30dp"
                        android:backgroundTint="#5A5858"
                        android:text="@string/send"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/def"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/menuvidjet"
        android:clickable="true"
        android:focusable="true"
        app:iconTint="@color/iconFire"
        app:itemIconTint="@color/black"
        app:menu="@menu/bottom_menu">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/imagehome" />

            <Button
                android:id="@+id/homedome"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginEnd="184dp"
                android:layout_marginBottom="28dp"
                android:backgroundTint="#636363"
                android:text="@string/name_menu0"
                app:layout_constraintBottom_toBottomOf="@id/imageView2"
                app:layout_constraintEnd_toEndOf="@id/imageView2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>